Fixed spike bug - Added spike extension logic