@@ -1,11 +1,12 @@
 package com.smma.hoppenhelm.controller;
+
 import java.util.Random;
 
 import com.smma.hoppenhelm.model.Blank;
 import com.smma.hoppenhelm.model.Coin;
 import com.smma.hoppenhelm.model.Enemy;
 import com.smma.hoppenhelm.model.GameState;
-import com.smma.hoppenhelm.model.GameState.states;
+import com.smma.hoppenhelm.model.GameState.State;
 import com.smma.hoppenhelm.model.Ground;
 import com.smma.hoppenhelm.model.HealthPotion;
 import com.smma.hoppenhelm.model.Player;
@@ -22,18 +23,27 @@ import javafx.scene.layout.VBox;
 import javafx.util.Duration;
 
 public class GameController {
-    @FXML private Label playerName;
-    @FXML private Label score;
-    @FXML private VBox objectParent;
-    @FXML private HBox level0;
-    @FXML private HBox level1;
-    @FXML private Button attackButton;
-    @FXML private Button moveButton;
-    @FXML private Button shieldButton;
+    @FXML
+    private Label playerName;
+    @FXML
+    private Label score;
+    @FXML
+    private VBox objectParent;
+    @FXML
+    private HBox level0;
+    @FXML
+    private HBox level1;
+    @FXML
+    private Button attackButton;
+    @FXML
+    private Button moveButton;
+    @FXML
+    private Button shieldButton;
     @FXML
     private ImageView playerView;
     private boolean isRunning = true;
     private Player player;
+    private boolean shouldConsume = false;
 
     public void setPlayer(Player player) {
         this.player = player;
@@ -41,27 +51,44 @@ public class GameController {
         updatePlayerInfo();
         renderGame();
     }
-    private void loseGame(){
+
+    private void loseGame() {
         isRunning = false;
-        score.setText("!GAME OVER!" + " Score: " + player.getX() + " Coins: " + player.getCoins());
     }
 
     @FXML
     private void onMove() {
-        if(isRunning){
-        moveButton.setDisable(true); //Disable move button to avoid bugs
+        if (isRunning) {
+            moveButton.setDisable(true); //Disable move button to avoid bugs
 
-        player.move();
-        updatePlayerInfo();
-        animateMove();
+            player.move();
             switch (GameState.moveStates()) {
-                case states.COIN -> player.addCoins(1);
-                case states.POTION -> player.gainHealth(1);
-                case states.ENEMY, states.SPIKE -> {
+                case COIN -> {
+                    System.out.println("Coin");
+                    player.addCoins(1);
+                    shouldConsume = true;
+                }
+                case POTION -> {
+                    System.out.println("Potion");
+                    player.gainHealth(1);
+                    shouldConsume = true;
+                }
+                case ENEMY -> {
+                    System.out.println("Enemy");
                     if (!player.loseHealth(1)) loseGame();
                 }
-                default -> {}
+                case SPIKE -> {
+                    System.out.println("Spike");
+                    SpikedGround sg = (SpikedGround) GameState.getObjects()[0];
+                    if(sg.isExtended()) {
+                        if (!player.loseHealth(1)) loseGame();
+                    }
+                }
+                default -> {
+                }
             }
+            animateMove();
+            updatePlayerInfo();
         }
     }
 
@@ -76,10 +103,13 @@ public class GameController {
     }
 
     private void updatePlayerInfo() {
-        score.setText("Health: " + player.getHealth() + " Score: " + player.getX() + " Coins: " + player.getCoins());
+        if (player.getHealth() == 0)
+            score.setText("!GAME OVER!" + " Score: " + player.getX() + " Coins: " + player.getCoins());
+        else
+            score.setText("Health: " + player.getHealth() + " Score: " + player.getX() + " Coins: " + player.getCoins());
     }
 
-    private void renderGame(){
+    private void renderGame() {
         //Init player view
         playerView = player.draw();
         playerView.setTranslateY(60);
@@ -89,7 +119,7 @@ public class GameController {
 
         //Draw views
         objectParent.getChildren().addFirst(playerView);
-        for(int i = 0 ; i < 4; i++){
+        for (int i = 0; i < 4; i++) {
             level1.getChildren().add(new Blank().draw());
             level0.getChildren().add(new Ground().draw());
         }
@@ -103,33 +133,33 @@ public class GameController {
         switch (nextGround) {
             case 0 -> {
                 HealthPotion hp = new HealthPotion(1);
-                GameState.addState(states.POTION,hp);
+                GameState.addState(State.POTION, hp);
                 level1Image = hp.draw();
             }
             case 1 -> {
                 Torch t = new Torch();
-                GameState.addState(states.BLANK,t);
+                GameState.addState(State.BLANK, t);
                 level1Image = t.draw();
             }
             case 2 -> {
                 Coin c = new Coin(1);
-                GameState.addState(states.COIN,c);
+                GameState.addState(State.COIN, c);
                 level1Image = c.draw();
             }
             case 3 -> {
                 Enemy e = new Enemy();
-                GameState.addState(states.ENEMY,e);
+                GameState.addState(State.ENEMY, e);
                 level1Image = e.draw();
             }
             case 4 -> {
                 SpikedGround sp = new SpikedGround(1000);
-                GameState.addState(states.SPIKE,sp);
+                GameState.addState(State.SPIKE, sp);
                 level1Image = sp.draw();
                 sp.start();
             }
             default -> {
                 Blank b = new Blank();
-                GameState.addState(states.BLANK,b);
+                GameState.addState(State.BLANK, b);
                 level1Image = b.draw();
             }
         }
@@ -138,7 +168,7 @@ public class GameController {
         level0.getChildren().add(new Ground().draw());
     }
 
-    private void animateMove(){
+    private void animateMove() {
         TranslateTransition level0Transition = new TranslateTransition(Duration.millis(500));
         level0Transition.setByX(-90);
         level0Transition.setCycleCount(1);
@@ -158,19 +188,26 @@ public class GameController {
         playerTransition.setNode(playerView);
 
         level0Transition.setOnFinished(actionEvent -> {
-            level0.getChildren().remove(0);
+            level0.getChildren().removeFirst();
             level0.setTranslateX(0);
         });
 
         level1Transition.setOnFinished(actionEvent -> {
-            level1.getChildren().remove(0);
+            level1.getChildren().removeFirst();
             level1.setTranslateX(0);
             renderNextTile();
+            if(shouldConsume) consume();
+            shouldConsume = false;
             moveButton.setDisable(false);
         });
 
         playerTransition.play();
         level0Transition.play();
         level1Transition.play();
+    }
+
+    private void consume(){
+        level1.getChildren().removeFirst();
+        level1.getChildren().addFirst(new Blank().draw());
     }
 }
